# Algorithms-and-Data-Structures-2025-2nd-year

./: .gitignore  README.md
lesson_02/: README.md  calculator.py  example.ipynb  graph.py  producer.py  pyproject.toml
lesson_03/: README.md  double_list.py  example.py  linked_list.py  linked_list_old.py
lesson_04/: ex01.py  ex02.py
lesson_05/: fill_paint.py  flatten.py  koch_snowflake.py  main.py  mandelbrot_recursive.py  sierpinski_triangle.py
lesson_06/: ACTIVE_ELEMENTS_DEMO.md  PROMPT_GUIDE.md  QUICK_START.md  README.md  bubble.py  bubble_adaptive.py  insertion.py  main.py  selection.py  test_algorithms.py  test_visualizer.py  visualizer.py
lesson_07/: head-on_radix.py  merge_sort.py  quick_sort.py  radix.py  test_speed.py
lesson_08/: binary_search.py  binary_search_upper.py  index_linear_search.py  interpolation.py  interpolation_array.py  interpolation_visual_simple.py  interpolation_visual_steps.py  main.py  team_sort.py
lesson_09/: boyer_moore_search.py  example_hash.py  kmp.py  naive_search.py  rabina_karp.py
lesson_10/: README.md  example01.py  example02.py  example03.py  example04.py  example05.py  example05a.py  example06.py  example07.py  example08.py  example09.py  example10.py  example11.py  example12.py  example13.py  hashlib.md  requirements.txt
lesson_11/: bfs_itr.py  dfs.py  dfs_itr.py  graph_visualization.py  visual_graph.py
lesson_12/: README.md  big_bang_theory_report.md  example01.py  example02.py  example03.py  example04.py  example04a.py  example05.py  example06.py  example07.py  example08.py  example09.py  example10.py  example11.py  example12.py  example13.py  example14.py  fellowship_priorities_report.md  house_priorities_report.md  naruto_ninja_report.md  pyproject.toml
lesson_13/: requirements.txt
lesson_14/: README.md  bst.py  main.py  order.py
lesson_15/: README.md  avl.py  b_tree.py  base_avl.py  performance_comparison.py
lesson_16/: demo.py  example_01_autofill.py  example_02_count_words.py  example_03_check_spelling.py  example_04_get_corrections.py  example_05_get_corrections_fixed.py  example_06_extend_trie.py  example_07_longest_common_word.py  example_08_tag_system.py  example_09_template_system.py  insert.py  trie.py
lesson_17/: README.md  app.py  custom_objects.py  custom_objects_explanation.md  game.py  main.py  median.py  median_explanation.md  service.py  sort.py
lesson_19/: README.md  activity_selection.py  backpack_bruteforce.py  backpack_greed.py  backpack_memo.py  coin_greed.py  huffman_coding.py  huffman_coding_release.py  task_scheduling.py
lesson_20/: 01_approaches.py  02_bk.py  04_kadane.py  05_longest_increasing_subsequence.py  06_longest_common_subsequence.py  08_rod_cutting_problem.py  09_bf.py  10_tsp_brute_force.py  11_tsp_hk.py  README.md
lesson_21/: kruskal.py  main.py  (+4 more)
vibe_coding/: .gitignore  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
vibe_coding/.cursor/rules/: main.mdc
vibe_coding/docs/: arch_rules.md  architecture.md  plan.md  requirements.md
vibe_coding/src/: main.py
vibe_coding/src/game/: __main__.py
vibe_coding/src/game/core/: physics.py
vibe_coding/src/game/domain/: entities.py  game_state.py
vibe_coding/src/game/infra/: logging.py
vibe_coding/tests/unit/: test_physics.py
(+70 files in other folders)
